# AUDIAW

./: .gitignore  ARCHITECTURE.md  BUILD_TEST_REPORT.md  CHANGELOG.md  CODE_SIGNING_CONFIG.md  CODE_SIGNING_SETUP.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  HOW_TO_RELEASE.md  INSTALL.md  INSTALLATION.md  LICENSE  PHASE_3_FIXES_REPORT.md  QUICKSTART.md  README.md  RELEASE.md  RELEASE_NOTES.md  SETUP.md  TEST_PHASE_1_REPORT.md  TEST_PHASE_2_REPORT.md  VERIFICATION.md  WINDOWS_PACKAGING_AUDIT.md  WINDOWS_PACKAGING_FIXES_SUMMARY.md  WINDOWS_RELEASE_FIXES_FINAL_SUMMARY.md  WINDOWS_RELEASE_GUIDE.md  WINDOWS_SIGNING_AND_RELEASE.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.codex/environments/: environment.toml
.github/: PULL_REQUEST_TEMPLATE.md
BOB REPORT ETC/: AUDIAW-DOCS-VOL4.md  bob_task_may-15-2026_10-01-59-pm.md  bob_task_may-15-2026_10-09-25-pm.md  bob_task_may-15-2026_10-13-40-pm.md  bob_task_may-15-2026_9-25-54-pm.md  bob_task_may-15-2026_9-42-02-pm.md  bob_task_may-15-2026_9-53-40-pm.md  bob_task_may-15-2026_9-56-23-pm.md  bob_task_may-16-2026_12-22-15-am.md  bob_task_may-16-2026_12-35-10-am.md  bob_task_may-16-2026_12-39-32-am.md  bob_task_may-16-2026_12-48-40-am.md  bob_task_may-16-2026_12-50-01-am.md  bob_task_may-16-2026_2-25-06-am.md  bob_task_may-16-2026_2-33-06-am.md  bob_task_may-16-2026_2-52-53-am.md  bob_task_may-16-2026_3-09-28-am.md  bob_task_may-16-2026_3-47-34-am.md  bob_task_may-16-2026_3-52-15-am.md  bob_task_may-16-2026_4-10-13-am.md  bob_task_may-16-2026_4-11-45-am.md  bob_task_may-18-2026_12-21-37-pm.md  bob_task_may-18-2026_12-22-50-pm.md  bob_task_may-18-2026_12-24-01-pm.md  bob_task_may-18-2026_12-28-21-pm.md  bob_task_may-18-2026_12-37-16-pm.md  bob_task_may-18-2026_12-51-12-pm.md  bob_task_may-18-2026_12-51-36-pm.md  bob_task_may-18-2026_5-10-33-pm.md  bob_task_may-18-2026_5-26-10-pm.md  bob_task_may-18-2026_5-29-59-pm.md
DOCS/: API.md  ARCHITECTURE.md  AUDIAW-DESIGN.md  AUDIAW-DOCS-VOL1.md  AUDIAW-DOCS-VOL2.md  AUDIAW-DOCS-VOL3.md  AUDIAW-DOCS-VOL4.md  DEMO.md  DEVELOPMENT.md  FEATURES.md  HACKATHON.md  ROADMAP.md
IBM BOB/: BOB.md
audiaw-marketing/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
bob-sessions/: bob_task_may-15-2026_10-11-05-pm.md  bob_task_may-15-2026_9-09-08-pm.md  bob_task_may-15-2026_9-18-42-pm.md  bob_task_may-16-2026_12-22-29-am.md  bob_task_may-16-2026_12-56-41-am.md  bob_task_may-16-2026_12-58-21-am.md  bob_task_may-16-2026_2-45-26-am.md  bob_task_may-16-2026_2-58-56-am.md  bob_task_may-16-2026_3-15-50-am.md  bob_task_may-16-2026_3-22-37-am.md  bob_task_may-16-2026_3-28-53-am.md  bob_task_may-16-2026_3-31-42-am.md  bob_task_may-16-2026_3-36-38-am.md  bob_task_may-16-2026_3-53-53-am.md  bob_task_may-16-2026_3-56-54-am.md  bob_task_may-16-2026_4-16-24-am.md  bob_task_may-18-2026_11-35-56-am.md  bob_task_may-18-2026_12-35-53-pm.md  bob_task_may-18-2026_12-41-30-pm.md  bob_task_may-18-2026_4-42-21-pm.md  bob_task_may-18-2026_4-45-45-pm.md  bob_task_may-18-2026_5-01-59-pm.md  bob_task_may-18-2026_5-20-35-pm.md
crates/audiaw-audio-io/: Cargo.toml
crates/audiaw-audio-io/src/: decoder.rs  encoder.rs  lib.rs
crates/audiaw-engine/: Cargo.toml
crates/audiaw-engine/src/: effects_manager.rs  lib.rs
crates/audiaw-project/: Cargo.toml
crates/audiaw-project/src/: lib.rs
crates/audiaw-types/: Cargo.toml
crates/audiaw-types/src/: lib.rs
scripts/: check-config.ps1  verify-packaging-config.ps1  verify-windows-build.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/stores/: dawStore.ts  (+3 more)
(+44 files in other folders)
