[workspace]
members = [
    "crates/audiaw-engine",
    "crates/audiaw-audio-io",
    "crates/audiaw-types",
    "crates/audiaw-project",
    "crates/audiaw-effects",
    "crates/audiaw-history",
    "src-tauri"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
authors = ["AUDIAW Contributors"]

[workspace.dependencies]
# Audio
cpal = "0.15"
# Async
tokio = { version = "1.35", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Concurrency
crossbeam = "0.8"
arc-swap = "1.6"
# Time
chrono = { version = "0.4", features = ["serde"] }
