[package]
name = "audiaw"
version = "1.0.0"
description = "Professional Open-Source Digital Audio Workstation"
authors = ["AUDIAW Contributors"]
license = "GPL-3.0"
repository = "https://github.com/aloof-garage/AUDIAW"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# AUDIAW crates
audiaw-engine = { path = "../crates/audiaw-engine" }
audiaw-audio-io = { path = "../crates/audiaw-audio-io" }
audiaw-types = { path = "../crates/audiaw-types" }
audiaw-project = { path = "../crates/audiaw-project" }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
