[package]
name = "audiaw-project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
audiaw-types = { path = "../audiaw-types" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "audiaw_project"
path = "src/lib.rs"